# Dwengo-library

./: .gitignore  COPYING  Makefile.am  README  README.md  configure.ac
data/: Makefile.proj  common.mk
dwengo/lib/: Makefile.am  Makefile.sdcc  dwengoADC.c  dwengoADC.h  dwengoBoard.c  dwengoClock.h  dwengoDelay.c  dwengoDelay.h  dwengoIOBoard.c  dwengoMotor.h  dwengoRC.c  dwengoServo.c  dwengoTimer.h  dwengoUsart.c  dwengoUsart.h
dwengo/lib/compiler/: mplabc18.h  pwm.h
dwengo/share/: Makefile.am  Makefile.topprojdir
dwengo/test/boardTest/: rm18f4550.lkr  test+bootloader.hex  testDwengoBoard.c
dwengo/test/sensorTest/: test_sensorboard.c
dwengo/test/servoTest/: servoTest.c
dwenguino/: package_dwengo.org_dwenguino_index.json  pins_arduino.h
dwenguino/Dwenguino/: boards.txt  platform.txt  version.txt
dwenguino/Dwenguino/bootloaders/dwenguino/: .gitignore  BootloaderDwenguino-Welcome.hex  BootloaderDwenguino.c  BootloaderDwenguino.h  BootloaderDwenguino.hex  Caterina-Dwenguino.hex  Caterina.c  Caterina.h  Descriptors.c  Descriptors.h  DocumentDrawings.vsd  Katiana-Bootloader.inf  Katiana.c  Katiana.h  Katiana.hex  Katiana.txt  KatianaSPM.h  LICENSE  Makefile  NewUsbHdwrSerial.sh  README.md  SignatureTable.S  UsbHdwrSerial.h  ValidateUsbHdwrSerial.c  custom.css  doxyfile
dwenguino/Dwenguino/bootloaders/dwenguino/Arduino-Core/: USBAPI.h  USBCore.cpp
dwenguino/Dwenguino/bootloaders/dwenguino/Arduino-Sketch/: USB_CustomDescriptors.h
dwenguino/Dwenguino/bootloaders/dwenguino/Board/: Board.c  Board.h  LEDs.h
dwenguino/Dwenguino/bootloaders/dwenguino/Config/: AppConfig.h  LUFAConfig.h
dwenguino/Dwenguino/cores/dwenguino/: Tone.cpp  USBCore.cpp  USBDesc.h  WInterrupts.c  wiring_analog.c  wiring_private.h
dwenguino/Dwenguino/drivers/: Dwenguino_CDC_driver.inf
dwenguino/Dwenguino/libraries/Dwenguino/: keywords.txt  library.properties
dwenguino/Dwenguino/libraries/Dwenguino/examples/Bluetooth/: Bluetooth.ino
dwenguino/Dwenguino/libraries/Dwenguino/examples/LabviewLinxInterface/: LabviewLinxInterface.ino
dwenguino/Dwenguino/libraries/Dwenguino/examples/Music/: Music.ino
dwenguino/Dwenguino/libraries/Dwenguino/examples/ReadAnalog/: ReadAnalog.ino
dwenguino/Dwenguino/libraries/Dwenguino/examples/SensorPanel/: SensorPanel.ino
dwenguino/Dwenguino/libraries/Dwenguino/examples/SweepServo/: SweepServo.ino
dwenguino/Dwenguino/libraries/Dwenguino/examples/Welcome/: Welcome.ino
dwenguino/Dwenguino/libraries/Dwenguino/src/: DwenguinoLCD.cpp  DwenguinoLCD.h  DwenguinoMotor.cpp  DwenguinoMotor.h  DwenguinoSensorPanel.cpp  DwenguinoSensorPanel.h
dwenguino/Dwenguino/libraries/LinxDwenguino/: LinxDwenguino.h  LinxSerialListener.cpp  keywords.txt  library.properties
dwenguino/Dwenguino/libraries/LinxDwenguino/src/: LinxSerialListener.cpp
dwenguino/Dwenguino/libraries/LinxDwenguino/utility/: LinxDevice.cpp  LinxDevice.h
dwenguino/Dwenguino/libraries/NewPing/: NewPing.cpp
dwenguino/Dwenguino/libraries/NewPing/src/: NewPing.h
dwenguino/Dwenguino/libraries/Servo/src/avr/: ServoTimers.h
dwenguino/Dwenguino/libraries/dht/: dht.h  library.properties
dwenguino/Dwenguino/variants/dwenguino/: pins_arduino.h
dwenguino/hardware/Dwenguino/avr/: boards.txt  platform.txt  programmers.txt
dwenguino/hardware/Dwenguino/avr/bootloaders/dwenguino/: Caterina-Dwenguino.hex  Caterina.c  Caterina.h  Descriptors.c  Makefile
dwenguino/hardware/Dwenguino/avr/cores/dwenguino/: HardwareSerial.h  Tone.cpp  USBCore.cpp  wiring_private.h
dwenguino/hardware/Dwenguino/avr/libraries/Dwenguino/: keywords.txt
dwenguino/hardware/Dwenguino/avr/libraries/Dwenguino/examples/KnightRider/: KnightRider.ino
dwenguino/hardware/Dwenguino/avr/libraries/Dwenguino/examples/SensorPanel/: SensorPanel.ino
dwenguino/hardware/Dwenguino/avr/libraries/Dwenguino/src/: Dwenguino.h  DwenguinoSensorPanel.cpp
dwenguino/hardware/Dwenguino/avr/libraries/LinxDwenguino/: LinxDwenguino.cpp
dwenguino/hardware/Dwenguino/avr/libraries/Servo/: library.properties
dwenguino/hardware/Dwenguino/avr/variants/dwenguino/: pins_arduino.h
dwenguino/libraries/Dwenguino/: Dwenguino.cpp  Dwenguino.h  DwenguinoIOBoard.cpp  DwenguinoIOBoard.h  DwenguinoMotor.cpp  DwenguinoMotor.h  keywords.txt
dwenguino/libraries/Dwenguino/examples/Buttons/: Buttons.ino
dwenguino/libraries/Dwenguino/examples/IOBoard/: IOBoard.ino
dwenguino/libraries/Dwenguino/examples/LCD/: LCD.ino
dwenguino/libraries/Dwenguino/examples/LabviewLinxInterface/: LabviewLinxInterface.ino
dwenguino/libraries/Dwenguino/examples/Motors/: Motors.ino
dwenguino/libraries/Dwenguino/examples/Music/: Music.ino
dwenguino/libraries/Dwenguino/examples/ReadAnalog/: ReadAnalog.ino
dwenguino/libraries/Dwenguino/examples/SensorPanel/: SensorPanel.ino
dwenguino/libraries/Dwenguino/examples/SensorsPlus/: SensorsPlus.ino
dwenguino/libraries/Dwenguino/examples/SquareMotors/: SquareMotors.ino
dwenguino/libraries/Dwenguino/examples/SweepServo/SweepServo/: SweepServo.ino
dwenguino/libraries/Dwenguino/examples/Welcome/: Welcome.ino
dwenguino/libraries/Dwenguino/src/: DwenguinoSensorPanel.h
dwenguino/libraries/LinxDwenguino/: LinxDwenguino.cpp  LinxDwenguino.h
dwenguino/libraries/NewPing/: NewPing.cpp
dwenguino/libraries/dht/: dht.cpp
dwenguino/libraries/dht11/: dht11.cpp
dwenguino/test/: test.ino
lib/: Makefile  Makefile.am  Makefile_old  compiler.h  dwengoADC.c  dwengoBluetooth.c  dwengoBluetooth.h  dwengoBoard.c  dwengoBoard.h  dwengoClock.c  dwengoClock.h  dwengoConfig.h  dwengoDelay.c  dwengoDelay.h  dwengoI2C.c  dwengoI2C.h  dwengoIOBoard.h  dwengoInterrupt.c  dwengoInterrupt.h  dwengoLCD.c  dwengoLCD.h  dwengoMotor.c  dwengoNotes.h  dwengoRC.c  dwengoRC.h  dwengoSensorModule.c  dwengoSensorModule.h  dwengoServo.h  dwengoSound.c  dwengoSound.h  dwengoTimer.c  dwengoTimer.h  dwengoUsart.c  dwengoUsart.h
lib/compiler/: mplabc18.h  sdcc_pic16.h  sdcc_pic16_pwm.h
share/: Makefile.am  Makefile.proj
test/boardTest/: test.hex  test.mcp  test.mcw  testDwengoBoard.c
test/sensorTest/: test_sensorboard.hex
test/usartTest/: usartTest.c
(+1 files in other folders)
